Fixed visibility issue in small screen devices

--- a/styles.css
+++ b/styles.css
@@ -26,6 +26,7 @@ body {
   display: flex;
   width: 100%;
   flex-wrap: wrap;
+  min-width: 350px;
   max-width: 1100px;
   padding: 1em 2em;
   margin: 20px auto;
@@ -48,7 +49,7 @@ body {
 .img-container {
   width: 40%;
   padding: 2em;
-  min-width: 385px;
+  min-width: 300px;
   margin: 0 auto;
 }
 #image {
